added non JDK 1.8 feature